tests/baselines/reference/unionProofGenericMappedType.errors.txt
tests/cases/compiler/unionProofGenericMappedType.ts(15,5): error TS2322: Type '{ key: "foo"; value: number; }' is not assignable to type '{ key: "foo"; value: string; } | { key: "bar"; value: number; }'.
  Type '{ key: "foo"; value: number; }' is not assignable to type '{ key: "foo"; value: string; }'.
    Types of property 'value' are incompatible.
      Type 'number' is not assignable to type 'string'.
tests/cases/compiler/unionProofGenericMappedType.ts(20,5): error TS2322: Type '{ key: "foo"; value: number; }' is not assignable to type '{ key: "foo"; value: string; } | { key: "bar"; value: number; }'.
  Type '{ key: "foo"; value: number; }' is not assignable to type '{ key: "foo"; value: string; }'.
    Types of property 'value' are incompatible.
      Type 'number' is not assignable to type 'string'.


==== tests/cases/compiler/unionProofGenericMappedType.ts (2 errors) ====
    type Pairs<T> = {
        [TKey in keyof T]: {
            key: TKey;
            value: T[TKey];
        };
    };
    
    type Pair<T> = Pairs<T>[keyof T];
    
    type FooBar = {
        foo: string;
        bar: number;
    };
    
    let pair1: Pair<FooBar> = {
        ~~~~~
!!! error TS2322: Type '{ key: "foo"; value: number; }' is not assignable to type '{ key: "foo"; value: string; } | { key: "bar"; value: number; }'.
!!! error TS2322:   Type '{ key: "foo"; value: number; }' is not assignable to type '{ key: "foo"; value: string; }'.
!!! error TS2322:     Types of property 'value' are incompatible.
!!! error TS2322:       Type 'number' is not assignable to type 'string'.
        key: "foo",
        value: 3
    }; // no compile error here
    
    let pair2: Pairs<FooBar>[keyof FooBar] = {
        ~~~~~
!!! error TS2322: Type '{ key: "foo"; value: number; }' is not assignable to type '{ key: "foo"; value: string; } | { key: "bar"; value: number; }'.
!!! error TS2322:   Type '{ key: "foo"; value: number; }' is not assignable to type '{ key: "foo"; value: string; }'.
!!! error TS2322:     Types of property 'value' are incompatible.
!!! error TS2322:       Type 'number' is not assignable to type 'string'.
        key: "foo",
        value: 3
    }; // this does cause a compile error
    